# zen

./: .gitignore  CMakeLists.txt  Number  OMakefile  OMakeroot  README.md
bash/: .bashrc  .msenv14  .msenv32-sample  dotslash  install-dotslash.sh  make_msenv.cmd  opam_env.sh  run_cmake.sh  run_cpp.sh
cmake/: find_libraries.cmake  install_libraries.cmake  run_cmake.cmd
config/: Common.om
coq/sf/: Basics.v  Induction.v  Lists.v  Logic.v  Poly.v  Tactics.v
cpp/: CMakeLists.txt  recognizer.cpp
cpp/association_list/: association_list.cpp  sll.cpp
cpp/dict/: dict.cpp
cpp/euler3/: euler3.1.cpp  euler3.cpp
cpp/expr/: CMakeLists.txt  expr.cpp
cpp/findfirst/: CMakeLists.txt  findfirst.cpp
cpp/float/: float.cpp
cpp/gcc/: build.sh  notes.rst
cpp/l/: l2.cpp
cpp/lis/: lis.cpp
cpp/list/: list.hpp  list_test.cpp
cpp/monty/: monty.cpp
cpp/optional/: CMakeLists.txt  optional.cpp
cpp/perm/: perm.cpp
cpp/poly_var/: CMakeLists.txt  __init__.py  config.h  poly_var.cpp  poly_var.h  poly_var.ml  poly_var_module.cpp  poly_var_parse.cpp  poly_var_serialization.h  poly_var_serialization_test.cpp  poly_var_test.py  poly_var_test_c.c  poly_var_test_cpp.cpp  run_ocaml.cmd
cpp/recognizer/: analyzer.cpp  label.cpp  recognizer.cpp
cpp/runtime_length_encoding_compression_method/: runtime_length_encoding_compression_method.cpp
cpp/scan_left/: scan_left.cpp  scan_left2.cpp
cpp/sieve/: sieve.cpp
cpp/string_util/: string_util.cpp
cpp/sub_max_sum/: sub_max_sum.cpp
cpp/sum/: and.hpp  constructor.hpp  is_callable.hpp  logical.hpp  or.hpp  range.hpp  recursive_union.hpp  recursive_union_indexer.hpp  recursive_wrapper.hpp  sum.cpp  sum.hpp
cpp/unary/: unary.cpp  unary.ml
dbus/dbus-notify-proxy-test/: Cargo.toml
dbus/dbus-notify-test/: Cargo.toml
dbus/programmatically/: Cargo.toml  main.rs
dbus/programmatically/src/: main.rs
dbus/systemd-properties-test/: Cargo.toml
emacs/: init.el
felix/cma/: cma.flx
felix/expr/: expr.flx
felix/power_set/: power_set.flx  power_set.rst
felix/safe_integer/: optional.flx  run_flx.cmd
felix/state/: run_flx.cmd  state.flx  state.hs  state.py
haskell/aiu/: CHANGELOG.md  LICENSE  aiu.cabal  aiu.hs  aiu.rs
haskell/aiu/app/: Main.hs
haskell/aiu/app/aiu/: Main.hs
haskell/aiu/app/aiu2/: Main.hs
haskell/aiu/app/aiu3/: Main.hs
haskell/aiu/app/dist-newstyle/cache/: compiler
haskell/another-diagonal-problem/: main.hs
haskell/coerce/: Html.hs
haskell/curve/: Curve.hs  Date.hs  Eps.hs  Flow.hs  Interpolation.hs  Main.hs  Roots.hs
haskell/demangle-ghc/: demangle-c  demangle-ghc.c
haskell/fsm/: Fsm.hs
haskell/gauss/: Gauss.hs
haskell/ip/: Ip.hs
haskell/kind/: kind.hi  kind.hs  test
haskell/map-path/: CHANGELOG.md  LICENSE  map-path.cabal
haskell/map-path/app/: Main.hs
haskell/number_to_words/: Number.hs
haskell/optparse-applicative/: CHANGELOG.md  hie.yaml  optparse-scratch.cabal
haskell/optparse-applicative/src/: Main.hs
haskell/partition/: Partition.hs
haskell/permutations/: Main.hs
haskell/powerset/: subsets.hs
haskell/reader/: Reader.hs
haskell/state/: State.hs
haskell/template-haskell-exp/: CHANGELOG.md  Main.hs  T.hs  stack.yaml  template-haskell-exp.cabal
haskell/transformer/: MaybeT.hs
life/: life.org
math/category_theory_for_scientists/: solutions.tex
notes/: #type-classes.html#  annotations.md  arith-cxx-final-tagless.md  basic-typeclasses.html  buck-ideas.md  bucket_sort.html  buildghcwithstack.html  bush-fix.html  conversion.html  cos.html  count-parser-deps.html  dijkstra.html  dynamicpragmas.html  ecp.html  field-updates.html  ghc-lib-0.20190402.html  ghc-lib-new-compiler-log.md  hanoi.html  hie.md  in_map.html  langext.html  langext1.html  left_recursion.html  location.html  m.html  migrate.html  min_version_hlint.html  min_version_hlint.md  more-type-classes.html  names.html  narbel.html  ocaml-wrapped-libraries.md  parsecomments.html  parseerrors.html  partition-set.html  pass-cabal-flags.md  polynomial.html  possible-living-locations.md  ppx.html  print_tree.html  (+16 more)
notes/img/: life-of-beast.vsd  narbel_00.vsd  narbel_01.vsd  narbel_02.vsd  narbel_04.vsd  narbel_06.vsd  narbel_09.vsd  narbel_11.vsd  narbel_12.vsd  narbel_13.vsd  narbel_14.vsd  north-east-canada.vsd
notes/narbel/: narbel.html  (+1 more)
nsi/: ocaml.nsi
ocaml/: CMakeLists.txt  state.ml
ocaml/embed/: CMakeLists.txt  Makefile  main.c  mod.ml  modwrap.c  modwrap.def
ocaml/ocaml-syntax-highlight2/: ocaml-syntax-highlight.opam
ocaml/ocaml-syntax-highlight2/app/: jbuild  syntax_highlight.ml  syntax_highlight_cli.ml
ocaml/ocaml-syntax-highlight2/app/cli/: jbuild  syntax_highlight_cli.ml
ocaml/ocaml-syntax-highlight2/app/syntax_highlight_test/: jbuild
ocaml/ocaml-syntax-highlight2/lib/: highlight.ml  highlight.mli  jbuild  syntax_highlight_core.ml  syntax_highlight_core.mli
ocaml/ocaml-syntax-highlight2/lib/syntax_highlight/: highlight.mli  jbuild  syntax_highlight_core.ml  syntax_highlight_core.mli
ocaml/ocaml-syntax-highlight2/lib/syntax_highlight_test/: jbuild  syntax_highlight_core.ml
ocaml/ocaml-syntax-highlight2/test/app/syntax_highlight/: jbuild
ocaml/ocaml-syntax-highlight2/test/lib/syntax_highlight/: syntax_highlight_core.ml
ocaml/ocaml-syntax-highlight2/test/syntax_highlight/: jbuild  syntax_highlight_test.ml
ppf/: corrections.rst
rust/arith_final_tagless/: .gitignore  Cargo.toml  Makefile  build.rs  run
rust/arith_final_tagless/include/: cpp_repr.hpp
rust/arith_final_tagless/src/: arith_final_tagless.rs  cpp_repr.cpp  main.cpp
rust/cbindgen-exp/: Cargo.toml  Makefile  arith.h  build.rs  cbindgen.toml  proto.h
rust/cbindgen-exp/src/: arith.rs  ast.rs  lib.rs  main.cpp  main.rs.bak
rust/grmtools/asdl-rec/: Cargo.toml  build.rs
rust/grmtools/asdl-rec/src/: main.rs
rust/hhbc-ast/: .gitignore  Cargo.toml  build.rs  hhbc_ast.h
rust/hhbc-ast/src/: ast.rs  main.cpp
scripts/: convert.sh  git-update  git-update.sh  hlint-from-scratch.md  run-head-cabal-build-test.sh  run-head-init  run-head-init.sh  run-head.sh  test-ghc-9.0.sh  test-ghc-lib.sh
zig/: test.zig
(+867 files in other folders)
