cabal-version:      3.0
name:               map-path
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Shayne Fletcher
maintainer:         shayne@shaynefletcher.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable map-path
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0,
                      extra ^>=1.7
    hs-source-dirs:   app
    default-language: GHC2021
