[package]
name = "arith_final_tagless"
version = "0.1.0"
authors = ["Shayne Fletcher <shayne@shaynefletcher.org>"]
edition = "2018"

[lib]
name = "arith_final_tagless"
crate_type = ["staticlib"]
path = "src/lib.rs"

# [[bin]]
# name = "arith_final_tagless_exe"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
nom = "6.1.2"

[build-dependencies]
cxx-build = "1.0"
