[package]
name = "proto"
version = "0.0.1"
authors = ["me <me@gmail.com>"]
edition = "2018"

[lib]
name = "term"
crate_type = ["staticlib"]
path = "src/lib.rs"

# [[bin]]
# name = "term_exe"
# path = "src/main.rs"
# Note: must comment `crate_type=["staticlib"]` to use this.

[dependencies]
nom = "6.1.2"
libc = "0.2.97"
bumpalo = "3.7.0"

[build-dependencies]
cbindgen = "0.19.0"
