[package]
name = "hhbc-ast"
version = "0.0.1"
authors = ["me <me@gmail.com>"]
edition = "2018"

[lib]
name = "ast"
crate_type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
libc = "0.2.97"
bumpalo = {version="3.7.0", features=["collections"]}
bitflags = "1.0"

[patch.crates-io]
cbindgen = { path = "../../../cbindgen" }

[build-dependencies]
cbindgen = "0.20.0"
